--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
         "lint": "eslint './src/**/*.{ts,tsx,js}'",
         "clean": "rimraf dist",
         "build:dev": "npm run clean && npm run dist:dev",
-        "build:prod": "npm run clean && npm run dist:prod"
+        "build:prod": "npm run clean && npm run dist:prod",
+        "build": "react-scripts build"
     },
     "dependencies": {
-        "@reach/router": "^1.3.4",
         "@svgr/webpack": "^5.5.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
-        "ethers": "^5.3.1",
+        "ethers": "^5.5.1",
         "polished": "^4.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.2.1",
         "web-vitals": "^1.0.1"
