--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
     "main": "src/index.tsx",
     "private": true,
     "scripts": {
-        "start": "webpack-dev-server --port 8081 --mode development --env.development --open --hot --progress",
-        "dist:dev": "webpack --mode production --env.development --progress",
-        "dist:prod": "webpack --mode production --env.production --progress",
+        "start": "webpack-dev-server --port 8081 --mode development --open --hot --progress",
+        "dist": "webpack --mode production  --progress",
         "lint": "eslint './src/**/*.{ts,tsx,js}'",
         "clean": "rimraf dist",
-        "build:dev": "npm run clean && npm run dist:dev",
-        "build:prod": "npm run clean && npm run dist:prod",
-        "build": "react-scripts build"
+        "build": "npm run clean && npm run dist"
     },
     "dependencies": {
         "@svgr/webpack": "^5.5.0",
@@ -63,8 +60,8 @@
         "ts-node": "^9.1.1",
         "typescript": "^4.1.3",
         "typescript-plugin-styled-components": "^1.4.4",
-        "webpack": "^5.0.0",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.2"
+        "webpack": "^5.59.1",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.3.1"
     }
 }
